<resources>
    <string name="app_name">ParkingLotApp</string>
    <string name="button_send">View Parking Lot</string>
    <string name="activity2_name">Second Activity (Parking Lot Page)</string>
    <string name="activity3_name">Parking Spot Page(Third Activity)</string>
    <string name="model_input">Model</string>
    <string name="color_input">Color</string>
    <string name="vin_input">VIN</string>
    <string name="a1button_send">A1</string>
    <string name="a2butten_send">A2</string>
    <string name="carInfoButton_send">Add Info</string>
    <string name="activity4_name">A2 Parking Spot</string>
    <string name="a2_TextView_Title">A2</string>
    <string name="a2_model_editText">Enter Vehicle Model</string>
    <string name="a2_color_editText">Enter Vehicle Color</string>
    <string name="a2_vin_editText">Enter Vehicle VIN</string>
    <string name="a2_btn_save_data">ADD INFO</string>
    <string name="enter_password">Enter Password</string>
    <string name="username">Enter Username</string>
    <string name="button_login">Login</string>
    <string name="button_cancel">Cancel</string>
    <string name="textview3">Username</string>
    <string name="textview2">Password</string>
    <string name="a2">A2</string>
    <string name="textViewA2_vin">VIN</string>
    <string name="textViewA2_color">Color</string>
    <string name="textViewA2_model">Model</string>
    <string name="A1_remove_car_btn">Remove Car</string>
    <string name="A2_remove_car_btn">Remove Car</string>
</resources>
